@@ -9,16 +9,23 @@ import com.robertx22.mine_and_slash.mmorpg.Ref;
 import com.robertx22.mine_and_slash.new_content_test.talent_tree.RenderUtils;
 import com.robertx22.mine_and_slash.uncommon.capability.EntityCap;
 import com.robertx22.mine_and_slash.uncommon.datasaving.Load;
+import com.robertx22.mine_and_slash.uncommon.localization.Styles;
 import com.robertx22.mine_and_slash.uncommon.utilityclasses.GuiUtils;
+import com.robertx22.mine_and_slash.uncommon.utilityclasses.NumberUtils;
+import com.robertx22.mine_and_slash.uncommon.utilityclasses.TooltipUtils;
+import net.minecraft.client.Minecraft;
+import net.minecraft.client.gui.FontRenderer;
 import net.minecraft.client.gui.screen.Screen;
+import net.minecraft.client.gui.widget.Widget;
+import net.minecraft.client.gui.widget.button.ImageButton;
 import net.minecraft.util.ResourceLocation;
 import net.minecraft.util.math.MathHelper;
+import net.minecraft.util.text.ITextComponent;
 import net.minecraft.util.text.StringTextComponent;
 import net.minecraft.util.text.TextFormatting;
 import net.minecraftforge.api.distmarker.Dist;
 import net.minecraftforge.api.distmarker.OnlyIn;
 
-import java.text.DecimalFormat;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -45,9 +52,7 @@ public class StatGUI extends Screen {
     private static final ResourceLocation texture = new ResourceLocation(Ref.MODID, "textures/gui/stats_screen.png");
 
     @Override
-    public void render(int mouseX, int mouseY, float partialTicks) {
-
-        super.render(mouseX, mouseY, partialTicks);
+    public void render(int x, int y, float ticks) {
 
         minecraft.getTextureManager().bindTexture(texture);
         GlStateManager.color4f(1.0F, 1.0F, 1.0F, 1.0F);
@@ -56,6 +61,10 @@ public class StatGUI extends Screen {
                 .getScaledHeight() / 2 - this.sizeY / 2, 0, 0, sizeX, sizeY);
 
         renderStats();
+
+        super.render(x, y, ticks);
+
+        buttons.forEach(b -> b.renderToolTip(x, y));
 
     }
 
@@ -79,7 +88,7 @@ public class StatGUI extends Screen {
         return (int) (minecraft.mainWindow.getScaledHeight() / 2 - this.sizeY / 2 + 40);
     }
 
-    private String getStatString(Stat stat, EntityCap.UnitData data) {
+    public String getStatString(Stat stat, EntityCap.UnitData data) {
 
         String str = stat.translate() + ": " + data.getUnit()
                 .getStat(stat)
@@ -92,7 +101,7 @@ public class StatGUI extends Screen {
         if (stat instanceof IUsableStat) {
             IUsableStat usable = (IUsableStat) stat;
 
-            String value = formattedValue(usable.GetUsableValue(data.getLevel(), (int) data
+            String value = NumberUtils.formatNumber(usable.GetUsableValue(data.getLevel(), (int) data
                     .getUnit()
                     .getStat(stat).Value) * 100);
 
@@ -104,23 +113,13 @@ public class StatGUI extends Screen {
     }
 
     private List<Stat> getList() {
-
         List<Stat> list = new ArrayList<>();
-
-        for (Map.Entry<String, List<Stat>> entry : statmap.entrySet()) {
-            for (Stat stat : entry.getValue()) {
-                list.add(stat);
-            }
-            list.add(new UnknownStat());
-        }
+        statmap.forEach((key, value) -> {
+            list.addAll(value);
+            list.add(new UnknownStat()); // as spacing
+        });
 
         return list;
-
-    }
-
-    private int drawAndIncreaseSpacing(int x, int y, String str) {
-        this.drawString(minecraft.fontRenderer, str, x, y, TextFormatting.GOLD.getColor());
-        return this.getHeightSpacing();
 
     }
 
@@ -142,28 +141,38 @@ public class StatGUI extends Screen {
         added += this.drawTitleAndIncreaseSpacing(x - 22, y + added, this.statgroup.word.translate() + ": ");
         added += this.getHeightSpacing() / 3;
 
+        y += added;
+
+        //
+        List<Widget> newlist = new ArrayList<>();
+        for (Widget button : new ArrayList<Widget>(buttons)) {
+            if (button instanceof StatButton == false) {
+                newlist.add(button);
+            }
+        }
+        this.buttons.clear();
+        this.buttons.addAll(newlist);
+        //
+
         EntityCap.UnitData data = Load.Unit(minecraft.player);
 
         for (int i = currentElement; i < list.size(); i++) {
             if (i > -1) { // or scrolling crashes
 
-                if (list.get(i) instanceof UnknownStat) {
-                    added += this.drawAndIncreaseSpacing(x, y + added, "");
-                    continue;
+                if (added < this.sizeY - 60) {
+
+                    Stat stat = list.get(i);
+
+                    if (stat instanceof UnknownStat) {
+
+                    } else {
+                        this.addButton(new StatButton(data, stat, x, y));
+                    }
+
+                    y += getHeightSpacing();
+                    added += getHeightSpacing();
                 }
 
-                Stat stat = list.get(i);
-                String str = this.getStatString(stat, data);
-
-                if (added < this.sizeY - 50) {
-
-                    ResourceLocation res = stat.getIconLocation();
-
-                    RenderUtils.renderIcon(res, x - 22, y + added - getHeightSpacing() / 4);
-
-                    added += this.drawAndIncreaseSpacing(x, y + added, str);
-
-                }
             }
 
         }
@@ -174,22 +183,6 @@ public class StatGUI extends Screen {
 
     private int getHeightSpacing() {
         return 18;
-    }
-
-    public static String formattedValue(float val) {
-
-        DecimalFormat format = new DecimalFormat();
-
-        if (Math.abs(val) < 10) {
-            format.setMaximumFractionDigits(1);
-
-            return format.format(val);
-
-        } else {
-            int intval = (int) val;
-            return intval + "";
-        }
-
     }
 
     @Override
@@ -257,4 +250,67 @@ public class StatGUI extends Screen {
         }
     }
 
+    static int button_sizeX = 18;
+    static int button_sizeY = 18;
+
+    static ResourceLocation BUTTON_TEX = new ResourceLocation("");
+
+    class StatButton extends ImageButton {
+
+        FontRenderer font = Minecraft.getInstance().fontRenderer;
+        Stat stat;
+        EntityCap.UnitData unitdata;
+
+        public StatButton(EntityCap.UnitData unitdata, Stat statData, int xPos,
+                          int yPos) {
+            super(xPos, yPos, button_sizeX, button_sizeY, 0, 0, button_sizeY, BUTTON_TEX, (button) -> {
+            });
+
+            this.stat = statData;
+            this.unitdata = unitdata;
+
+        }
+
+        @Override
+        public void renderToolTip(int x, int y) {
+            if (isInside(x, y)) {
+
+                List<ITextComponent> tooltip = Arrays.asList(Styles.BLUECOMP()
+                        .appendSibling(stat.locDesc()));
+
+                StatGUI.this.renderTooltip(TooltipUtils.compsToStrings(tooltip), x, y, Minecraft
+                        .getInstance().fontRenderer);
+
+            }
+        }
+
+        public boolean isInside(int x, int y) {
+            return GuiUtils.isInRect(getIconX(), getIconY(), button_sizeX, button_sizeY, x, y);
+        }
+
+        public int getIconX() {
+            return this.x - 22;
+        }
+
+        public int getIconY() {
+            return this.y - getHeightSpacing() / 4;
+        }
+
+        @Override
+        public void renderButton(int x, int y, float f) {
+            // super.renderButton(x, y, f);
+
+            if (!(stat instanceof UnknownStat)) {
+
+                String str = StatGUI.this.getStatString(stat, unitdata);
+
+                ResourceLocation res = stat.getIconLocation();
+
+                RenderUtils.renderIcon(res, getIconX(), getIconY());
+
+                StatGUI.this.drawString(font, str, this.x, this.y, TextFormatting.GOLD.getColor());
+            }
+        }
+
+    }
 }
